frontend/test/should_fail/computations_no_proc.grg
procedure foo()
{
	return;
}

function bar() : int
{
	foo();
	return(42);
}
